# twobunch-s2e-rl

./: .gitignore  README.md  pyproject.toml
configs/: bptt.yaml  bptt_dr.yaml  bptt_gc.yaml  expanded_full.yaml  expanded_pilot.yaml  shac.yaml  shac_dr.yaml  tightbox_v2_full.yaml  tightbox_v2_pilot.yaml  wakes_gate.yaml
configs/datagen/: expanded_anchored_full.yaml  expanded_anchored_pilot.yaml  expanded_smoke.yaml  full.yaml  pilot.yaml  smoke.yaml  tightbox_pilot.yaml
configs/rl/: bptt.yaml  bptt_dr.yaml  bptt_gc.yaml  bptt_gc_combined.yaml  bptt_gc_matched.yaml  bptt_gc_sigmaz.yaml  bptt_gc_tightbox.yaml  shac.yaml  shac_dr.yaml
configs/surrogate/: README.md
docs/: surrogate_roadmap.md  v2_rqs_design.md
results/beam_matching/: manifold_coverage.py  matching_result_figs.py
results/combined_dataset/: dataset_coverage.py  mbrl_objective_ranges.py
results/dataset_overview/: particle_loss_dist.py  summary_plots.py  twobunch_quality_plots.py
results/expanded_anchored_pilot/: anchored_failure_analysis.py  anchored_validation.py
results/ff_quad_range/: compare_configs.py  run_ff_quad_range.py
results/presentation_figures/: make_corner_dark.py  make_gc_knob_setpoints.py  make_lps_goals_poster.py  make_lps_sweep_dark.py  make_transverse_goals_poster.py
scripts/: baseline_sanity.py  run_sigmaz_pipeline.sh  spacing_feasibility_probe.py  transfer_setpoints.py  validate_bmad.py
tests/: test_eval_plots.py  test_properties.py  test_rl_drift.py  test_rl_env.py  test_rl_reward.py  test_surrogate.py  test_surrogate_data.py  test_sweep_params.py
(+75 files in other folders)
